# plus

./: .gitignore  076315e5.0f50f850.js  076315e5.49b8b053.js  076315e5.59f83577.js  0e384e19.04723ecf.js  0e384e19.074bafc0.js  0e384e19.231129c9.js  0e384e19.464f74b8.js  0e384e19.5e65ff5b.js  0e384e19.707c8cc8.js  0e384e19.9ff66544.js  0e384e19.a34ba71e.js  0e384e19.beb6c460.js  0e384e19.f7c3ed24.js  0e384e19.fc4c7c6f.js  1.0d7b2f78.js  1.1da6caa0.js  1.2fd926a8.js  1.308bc0ca.js  1.7f636ae2.js  1.9ebc27a1.js  14.2189ba2a.js  15.21d604d7.js  15.51da730c.js  15.ecf705d2.js  17.85452fa0.js  17.b2b236e8.js  17896441.18d101a8.js  17896441.21051314.js  17896441.4cda731e.js  17896441.4d3129d7.js  17896441.61c56234.js  17896441.9031f135.js  17896441.96fb7c7c.js  17d99490.02421789.js  17d99490.c63f5526.js  17d99490.ef4e380d.js  18.361c081a.js  18.f2fde69b.js  2.0363a1b8.js  (+139 more)
app/: main.py
plus/: plus.dockerfile  prestart.sh  pyproject.toml  pytest.ini
plus/alembic/: env.py
plus/alembic/versions/: 0f566066952c_user_name_nullable.py  7ee6c57839aa_init_user_model.py  963d2bd58576_.py
plus/app/: __init__.py  __main__.py  main.py
plus/app/api/: main_router.py
plus/app/core/: OAuth2.py  __init__.py  auth.py  config.py  fake_nctu.py  objects.py  time_interval_converter.py  time_interval_parser.py  timeslot_converter.py  timeslot_parser.py  timetable.py
plus/app/crud/: __init__.py  crud_college.py  crud_course.py  crud_course_timeslot.py  crud_user.py
plus/app/db/: base.py  base_class.py  init_db.py  session.py
plus/scripts/: .format.sh  .smoke_test.sh  .test.sh  test.sh
(+97 files in other folders)
