[tool.poetry]
name = "app"
version = "0.1.0"
description = "api server for students"
authors = ["Ian Chen <ianre657@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
python-dotenv = "^0.13.0"
black = "^19.10b0"
tenacity = "^6.2.0"
SQLAlchemy = "^1.3.17"
pydantic = "^1.5.1"
requests = "^2.23.0"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
pytest-cov = "^2.10.0"
isort = "^5.0.5"
autoflake = "^1.3.1"

[tool.black]
line-length = 90

exclude = '''
/(
    \.eggs
  | \.git
)
'''

[tool.isort]
sections='FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
no_lines_before = "LOCALFOLDER"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"